ProdIND/ProdPrograms/force-app/main/default/objects/Work_Order_Details__c/Work_Order_Details__c.object-meta.xml
<CustomObject>
    <label>Work Order Detail</label>
    <nameField>
        <label>Work Order Details Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Work Order Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>