ProdIND/ProdPrograms/force-app/main/default/objects/Work_Order_Details__c/fields/Contact_Amount__c.field-meta.xml
<CustomField>
    <fullName>Contact_Amount__c</fullName>
    <label>Contact Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>