ProdIND/ProdPrograms/force-app/main/default/objects/Work_Order_Details__c/fields/Contract_with_Company__c.field-meta.xml
<CustomField>
    <fullName>Contract_with_Company__c</fullName>
    <label>Contract with Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>