ProdIND/ProdPrograms/force-app/main/default/objects/Work_Order_Details__c/fields/Date_of_Commencement__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Commencement__c</fullName>
    <label>Date of Commencement</label>
    <type>Date</type>
</CustomField>