ProdIND/ProdPrograms/force-app/main/default/objects/Work_Order_Details__c/fields/Tenure_of_Contract_Years__c.field-meta.xml
<CustomField>
    <fullName>Tenure_of_Contract_Years__c</fullName>
    <label>Tenure of Contract(Years)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>